[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musculoskeletal-models"
version = "0.2.3"
description = "Collection of musculoskeletal principal component models, used by the GIAS3 Python package."
readme = "README.md"
license = { text = "Mozilla Public License 2.0 (MPL-2.0)" }
authors = [{ name = "Auckland Bioengineering Institute" }]

[project.urls]
Homepage = "https://github.com/musculoskeletal/models"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"musculoskeletal.models.shape_models" = ["*.pc"]
"musculoskeletal.models.atlas_meshes" = ["*.geof", "*.ens", "*.mesh"]
